--- a/development.properties
+++ b/development.properties
@@ -1,5 +1,5 @@
-color:blue
-fruit:banana
-vehicle:boat
-sport:basketball
-hobbie:puzzles
+color:blue00
+fruit:banana00
+vehicle:boat00
+sport:basketball00
+hobbie:puzzles00
